--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,7 @@ ol {
 .section-title .product-price {
 	font-size: 24px;
 	font-weight: 700;
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .section-title .product-price span {
@@ -144,7 +144,7 @@ ol {
 	bottom: -14px;
 	width: 80px;
 	height: 3px;
-	background: #FFD951;
+	background: #8AC54B;
 	content: "";
 	margin: 0 auto;
 }
@@ -185,14 +185,14 @@ ol {
 	font-weight: 700;
 	padding: 12px 30px;
 	color: #ffffff;
-	background: #FFD951;
+	background: #8AC54B;
 	text-transform: uppercase;
 }
 
 .site-btn {
 	color: #ffffff;
-	background: #FFD951;
-	border: 1px solid #FFD951;
+	background: #8AC54B;
+	border: 1px solid #8AC54B;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -483,8 +483,8 @@ ol {
 	position: absolute;
 	right: -3px;
 	top: -1px;
-	border: 1px solid #FFD951;
-	background: #FFD951;
+	border: 1px solid #8AC54B;
+	background: #8AC54B;
 	padding: 12px 16px 12px;
 	cursor: pointer;
 }
@@ -512,7 +512,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FFD951;
+	background: #8AC54B;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -543,7 +543,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FFD951;
+	background: #8AC54B;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -587,7 +587,7 @@ ol {
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-items table tr td.si-text .product-selected p {
-	color: #FFD951;
+	color: #8AC54B;
 	line-height: 30px;
 	margin-bottom: 7px;
 }
@@ -611,14 +611,14 @@ ol {
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-total span {
 	font-size: 14px;
-	color: #FFD951;
+	color: #8AC54B;
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
 	float: left;
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-total h5 {
-	color: #FFD951;
+	color: #8AC54B;
 	float: right;
 }
 
@@ -717,7 +717,7 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li.active a {
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li a {
@@ -733,7 +733,7 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li a:hover {
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .nav-item .nav-menu {
@@ -751,7 +751,7 @@ ol {
 }
 
 .nav-item .nav-menu li.active a {
-	background: #FFD951;
+	background: #8AC54B;
 }
 
 .nav-item .nav-menu li a {
@@ -768,7 +768,7 @@ ol {
 }
 
 .nav-item .nav-menu li:hover>a {
-	background: #FFD951;
+	background: #8AC54B;
 }
 
 .nav-item .nav-menu li:hover .dropdown {
@@ -798,7 +798,7 @@ ol {
 
 .nav-item .nav-menu li .dropdown li:hover>a {
 	background: transparent;
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .nav-item .nav-menu li .dropdown li a {
@@ -821,7 +821,7 @@ ol {
 }
 
 .hero-items .single-hero-items span {
-	color: #FFD951;
+	color: #8AC54B;
 	font-size: 12px;
 	font-weight: 700;
 	letter-spacing: 2px;
@@ -866,7 +866,7 @@ ol {
 	position: absolute;
 	left: 47%;
 	top: 160px;
-	background: #FFD951;
+	background: #8AC54B;
 	z-index: 1;
 	-webkit-transform: rotate(45deg);
 	-ms-transform: rotate(45deg);
@@ -1185,7 +1185,7 @@ ol {
 }
 
 .product-item .pi-pic .sale.pp-sale {
-	background: #FFD951;
+	background: #8AC54B;
 }
 
 .product-item .pi-pic .icon {
@@ -1219,7 +1219,7 @@ ol {
 }
 
 .product-item .pi-pic ul li.w-icon.active a {
-	background: #FFD951;
+	background: #8AC54B;
 	color: #ffffff;
 }
 
@@ -1254,7 +1254,7 @@ ol {
 }
 
 .product-item .pi-text .product-price {
-	color: #FFD951;
+	color: #8AC54B;
 	font-size: 20px;
 	font-weight: 700;
 }
@@ -1295,7 +1295,7 @@ ol {
 }
 
 .countdown-timer .cd-item span {
-	color: #FFD951;
+	color: #8AC54B;
 	font-weight: 700;
 	line-height: 40px;
 	font-size: 36px;
@@ -1422,7 +1422,7 @@ ol {
 }
 
 .single-latest-blog .latest-text .tag-list .tag-item i {
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .single-latest-blog .latest-text a {
@@ -1551,7 +1551,7 @@ ol {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background: #FFD951;
+	background: #8AC54B;
 	content: "";
 	border-radius: 50%;
 	opacity: 0;
@@ -1630,11 +1630,11 @@ ol {
 .newslatter-item .subscribe-form button {
 	display: inline-block;
 	color: #ffffff;
-	background: #FFD951;
+	background: #8AC54B;
 	font-size: 13px;
 	font-weight: 700;
 	text-transform: uppercase;
-	border: 1px solid #FFD951;
+	border: 1px solid #8AC54B;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -1663,7 +1663,7 @@ ol {
 }
 
 .copyright-reserved .copyright-text a:hover {
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .copyright-reserved .payment-pic {
@@ -1755,8 +1755,8 @@ ol {
 }
 
 .filter-widget .fw-brand-check .bc-item label input:checked~span {
-	background: #FFD951;
-	border-color: #FFD951;
+	background: #8AC54B;
+	border-color: #8AC54B;
 }
 
 .filter-widget .fw-brand-check .bc-item label .checkmark {
@@ -1843,14 +1843,14 @@ ol {
 }
 
 .filter-widget .filter-range-wrap .price-range .ui-slider-range.ui-corner-all.ui-widget-header:last-child {
-	background: #FFD951;
+	background: #8AC54B;
 }
 
 .filter-widget .filter-btn {
 	font-size: 14px;
 	color: #ffffff;
 	font-weight: 700;
-	background: #FFD951;
+	background: #8AC54B;
 	padding: 7px 20px 5px;
 	border-radius: 2px;
 	display: inline-block;
@@ -2051,7 +2051,7 @@ ol {
 	bottom: -4px;
 	width: 100%;
 	height: 2px;
-	background: #FFD951;
+	background: #8AC54B;
 	content: "";
 }
 
@@ -2102,7 +2102,7 @@ ol {
 	height: 100%;
 	left: 0;
 	top: 0;
-	border: 1px solid #FFD951;
+	border: 1px solid #8AC54B;
 	z-index: 1;
 }
 
@@ -2183,7 +2183,7 @@ ol {
 }
 
 .product-details .pd-desc h4 {
-	color: #FFD951;
+	color: #8AC54B;
 	font-weight: 700;
 }
 
@@ -2399,7 +2399,7 @@ ol {
 	top: -1px;
 	width: 100%;
 	height: 5px;
-	background: #FFD951;
+	background: #8AC54B;
 	content: "";
 	opacity: 0;
 }
@@ -2460,7 +2460,7 @@ ol {
 }
 
 .specification-table table tr td .p-price {
-	color: #FFD951;
+	color: #8AC54B;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -2692,7 +2692,7 @@ ol {
 
 .cart-table table tr td.p-price,
 .cart-table table tr td.total-price {
-	color: #FFD951;
+	color: #8AC54B;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -2844,7 +2844,7 @@ ol {
 }
 
 .proceed-checkout ul li.cart-total span {
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .proceed-checkout ul li span {
@@ -2937,8 +2937,8 @@ ol {
 }
 
 .checkout-form .create-item label input:checked~span {
-	background: #FFD951;
-	border-color: #FFD951;
+	background: #8AC54B;
+	border-color: #8AC54B;
 }
 
 .checkout-form .create-item label .checkmark {
@@ -3002,7 +3002,7 @@ ol {
 }
 
 .checkout-form .place-order .order-total .order-table li.total-price span {
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .checkout-form .place-order .order-total .order-table li span {
@@ -3028,8 +3028,8 @@ ol {
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label input:checked~span {
-	background: #FFD951;
-	border-color: #FFD951;
+	background: #8AC54B;
+	border-color: #8AC54B;
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label .checkmark {
@@ -3174,7 +3174,7 @@ ol {
 	font-size: 12px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #FFD951;
+	color: #8AC54B;
 	letter-spacing: 2px;
 	line-height: 20px;
 }
@@ -3227,7 +3227,7 @@ ol {
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #FFD951;
+	color: #8AC54B;
 	letter-spacing: 2px;
 	line-height: 20px;
 }
@@ -3264,7 +3264,7 @@ ol {
 	font-size: 12px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #FFD951;
+	color: #8AC54B;
 	letter-spacing: 2px;
 	line-height: 20px;
 	display: inline-block;
@@ -3348,7 +3348,7 @@ ol {
 	top: 0;
 	height: 88px;
 	width: 3px;
-	background: #FFD951;
+	background: #8AC54B;
 	content: "";
 }
 
@@ -3388,7 +3388,7 @@ ol {
 
 .blog-details-inner .tag-share .details-tag ul li i {
 	font-size: 18px;
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 .blog-details-inner .tag-share .blog-share {
@@ -3593,7 +3593,7 @@ ol {
 
 .map-inner .icon i {
 	font-size: 48px;
-	color: #FFD951;
+	color: #8AC54B;
 }
 
 /*---------------------
@@ -3750,7 +3750,7 @@ ol {
 	float: left;
 	font-size: 13px;
 	color: #ffffff;
-	background: #FFD951;
+	background: #8AC54B;
 }
 
 /*---------------------
@@ -4138,7 +4138,7 @@ ol {
 	}
 	.slicknav_btn {
 		border-radius: 0;
-		background-color: #FFD951;
+		background-color: #8AC54B;
 		display: inline-block;
 		right: -16px;
 	}
@@ -4148,12 +4148,12 @@ ol {
 	}
 	.slicknav_nav a:hover {
 		border-radius: 0;
-		background: #FFD951;
+		background: #8AC54B;
 		color: #fff;
 	}
 	.slicknav_nav .slicknav_row:hover {
 		border-radius: 0;
-		background: #FFD951;
+		background: #8AC54B;
 		color: #fff;
 	}
 	.inner-header .nav-right li.cart-icon .cart-hover {
